--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 
 
   <div class="w-full text-white bg-white">
-    <div class="w-full py-24 mx-auto sm:py-32">
+    <div class="w-full pt-24 mx-auto sm:pt-32">
       <div
         class="relative px-6 pt-16 overflow-hidden bg-gray-900 shadow-2xl isolate sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
         <svg viewBox="0 0 1024 1024"
