--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <div class="max-w-2xl grid-cols-1 lg:max-w-7xl lg:grid-cols-2">
       <img class="object-cover w-full rounded-l-lg aspect-[4/4]" src="./assets/web-designer.jpg" alt="">
     </div>
-    <div class="p-16 border-r-2 rounded-r-lg border-y-2">
+    <div class="p-16 border-r rounded-r-lg border-y">
       <div class="grid grid-cols-1 gap-6 grid-rows-8">
         <div class="row-span-2 border-l-2 border-indigo-600 ps-2">
           <dt class="font-medium text-gray-900">Lets Start With MEAN</dt>
@@ -580,7 +580,7 @@
 
 
 
-  <footer class="w-full px-8 bg-slate-950" aria-labelledby="footer-heading">
+  <footer class="w-full px-8 bg-[#111827]" aria-labelledby="footer-heading">
     <div class="grid grid-cols-5 py-24">
       <div class="flex flex-col p-2">
         <h4 class="mb-3 font-normal text-white text-md">Company</h4>
