--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </nav>
       <!-- Mobile menu, show/hide based on menu open state. -->
-      <div class="lg:hidden" role="dialog" aria-modal="true">
+      <div class="lg:hidden" role="dialog" aria-modal="false">
         <!-- Background backdrop, show/hide based on slide-over state. -->
         <div class="fixed inset-0 z-50"></div>
         <div
@@ -121,13 +121,8 @@
                 <a href="#"
                   class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50">Contact</a>
                 <a
-                  class="flex items-center bg-[#DC4E44] text-white py-2.5 px-[15px] rounded shadow-md hover:shadow-gray-400 hover:shadow-lg">
+                  class="flex items-center bg-indigo-600 text-white py-2.5 px-[15px] rounded shadow-md hover:shadow-gray-400 hover:shadow-lg">
                   Get in Touch</a>
-              </div>
-              <div class="py-6">
-                <a href="#"
-                  class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Log
-                  in</a>
               </div>
             </div>
           </div>
